--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
                 <p class="lub">Любители помогать людям и ломать системы.</p>
                 <p>Создатели популярного форума <a href="https://darkweb.su/" target="_blank">DarkWeb</a></p>
             </div>
-            <img src="/img/anonim.jpg" alt="анонимус хакер" class="anonim_green">
+            <img src="anonim.jpg" alt="анонимус хакер" class="anonim_green">
         </section>
         <div class="contact">
             <h2>Контакты для связи</h2>
         </div>
         <div class="cont">
-            <a href="http://t.me/admin" class="icon"><img src="/img/telegramm.png" alt="Телеграм значек"></a>
-            <a href="https://github.com/admin" class="icon"><img src="/img/github.png" alt="Значек ГитХаба"></a>
-            <a href="https://www.youtube.com/admin" class="icon"><img src="/img/ytoub.png" alt="Значек Ютуба"></a>
+            <a href="http://t.me/admin" class="icon"><img src="telegramm.png" alt="Телеграм значек"></a>
+            <a href="https://github.com/admin" class="icon"><img src="github.png" alt="Значек ГитХаба"></a>
+            <a href="https://www.youtube.com/admin" class="icon"><img src="ytoub.png" alt="Значек Ютуба"></a>
         </div>
         <div class="zal">
             <h2 class="zaslyg">Заслуги Anonymous</h2>
             <div class="img-zal">
                 <h4 class="razob">Разоблачение участия китайской армии в кибератаках против США</h4>
-                <img src="/img/kit.jpg" alt="Китай" class="kit-img">
+                <img src="kit.jpg" alt="Китай" class="kit-img">
                 <p class="zal-text1">Одним из крупнейших дел стала помощь в разоблачении китайских военных, которые предприняли серию нападений на американские компании, организации и правительственные агентства в 2011 году. Американские специалисты по безопасности и правительственные чиновники давно заявляли, что за кибератаками 2011 года на США стоит Китай, но для официального предъявления претензий у них не было доказательств. Китай категорически отрицал все обвинения.</p>
                 <h4 class="razob">Помощь в борьбе с тиранией правительства Ирана</h4>
-                <img src="/img/iran.jpg" alt="Иран" class="kit-img">
+                <img src="iran.jpg" alt="Иран" class="kit-img">
                 <p class="zal-text1">Группа хакеров предоставила иранским гражданам остро необходимые рекомендации о том, как они могут обойти онлайн-цензуру и беспрепятственно пользоваться Интернетом. Вмешательство «Анонимус» сыграло большую роль в поддержке права иранцев на свободу слова во время восстания.</p>
                 <h2 class="kto">Кто такие Anonymous?</h2>
                 <p class="kto-eto"><strong>Anonymous</strong> — это идеология, а не группа людей, как предполагает большинство писателей новостей. Последователи этой идеи борются за общедоступность информации, против притеснения свобод правительствами и корпорациями, против коррупции, и против любых других проявлений жизни общества, которые часть этого общества не одобряет. В <strong>Anonymous</strong> нет лидеров или представителей, никто не может говорить за всех. В <strong>Anonymous</strong> все равны.</p>
